@@ -10,6 +10,8 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Component;
 import org.springframework.util.StringUtils;
 import org.springframework.web.filter.OncePerRequestFilter;
+import org.springframework.core.env.Environment;
+import java.util.Arrays;
 
 import java.io.IOException;
 import java.util.List;
@@ -25,9 +27,11 @@ import java.util.UUID;
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     private final JwtTokenProvider jwtTokenProvider;
+    private final Environment env;
 
-    public JwtAuthenticationFilter(JwtTokenProvider jwtTokenProvider) {
+    public JwtAuthenticationFilter(JwtTokenProvider jwtTokenProvider, Environment env) {
         this.jwtTokenProvider = jwtTokenProvider;
+        this.env = env;
     }
 
     @Override
@@ -61,16 +65,18 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
                 // → SecurityConfig의 인가 설정에 따라 401 또는 허용
                 SecurityContextHolder.clearContext();
             }
-        } else {
-            // [LOCAL DEV ONLY] 토큰이 없더라도 로컬 테스트 편의를 위해 Mock User 주입
-            UUID mockUserId = UUID.fromString("00000000-0000-0000-0000-000000000000");
-            UsernamePasswordAuthenticationToken authentication =
-                new UsernamePasswordAuthenticationToken(
-                    mockUserId,
-                    null,
-                    List.of(new SimpleGrantedAuthority("ROLE_USER"))
-                );
-            SecurityContextHolder.getContext().setAuthentication(authentication);
+        } else if (SecurityContextHolder.getContext().getAuthentication() == null) {
+            // [LOCAL DEV ONLY] 토큰이 없더라도 로컬 환경이면 편의를 위해 Mock User 주입
+            if (Arrays.asList(env.getActiveProfiles()).contains("local")) {
+                UUID mockUserId = UUID.fromString("00000000-0000-0000-0000-000000000000");
+                UsernamePasswordAuthenticationToken authentication =
+                    new UsernamePasswordAuthenticationToken(
+                        mockUserId,
+                        null,
+                        List.of(new SimpleGrantedAuthority("ROLE_USER"))
+                    );
+                SecurityContextHolder.getContext().setAuthentication(authentication);
+            }
         }
 
         filterChain.doFilter(request, response);
